bk_ida/gccida/g2/diagnostic_for_decl
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.c:1361:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v10; // r13 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.c:1362:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v11; // r13 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.c:1367:1: error: unknown type name 'diagnostic_context_0'; did you mean 'diagnostic_context'?
diagnostic_context_0 *v16; // rbx 
^~~~~~~~~~~~~~~~~~~~
diagnostic_context
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.h:29:35: note: 'diagnostic_context' declared here
typedef struct diagnostic_context diagnostic_context;
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.c:1369:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v18; // rbx 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/diagnostic.c:1502:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v23] & 0x88) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/diagnostic_for_decl/src/obj/diagnostic.o] Error 1
